<!DOCTYPE resources [
    <!ENTITY app_name "USSD &amp; SMS codes">
    ]>

<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">&app_name;</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_done">Done</string>
    <string name="action_copy">Copy</string>
    <string name="ussd_edit_form">USSD Edit</string>
    <string name="sms_edit_form">SMS Edit</string>
    <string name="import_template_form">Import codes</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="phone_number">Phone number</string>
    <string name="sms_template_name">Name</string>
    <string name="sms_template_template">Code</string>
    <string name="sms_template_comment">Comment</string>
    <string name="select_templates">Show Intro</string>
    <string name="select_all">Select all</string>
    <string name="delete_selection">delete selection</string>
    <string name="action_selection_settings">settings</string>
    <string name="dele_items_snackbar">Selected items deleted</string>
    <string name="Deleted_message">Deleted %1$d items</string>
    <string name="items"> items</string>

    <plurals name="Deleted_message">
        <item quantity="one">Deleted %1$d code</item>
        <item quantity="other">Deleted %1$d codes</item>
    </plurals>

    <plurals name="Deleted_backup_message">
        <item quantity="one">Deleted %1$d backup</item>
        <item quantity="other">Deleted %1$d backups</item>
    </plurals>

    <string name="selection_toolbar_title">Slect items</string>
    <string name="selection_toolbar_title_selected">Slected</string>
    <string name="LoadDialogText">Loading...</string>
    <string name="no_sdcard">External SD card is inaccessible</string>
    <string name="Backup_sucsess">Backup %1$s is added</string>
    <string name="comment">Comment</string>
    <string name="restore_activity_form">Restore backup</string>
    <string name="BackupRestoredMessage">Backup %1$s restored</string>
    <string name="backupDialogTitle">Save backup to phone storage</string>
    <string name="setupDialogTitle">Request needs to be setup</string>
    <string name="setupDialogMessage">Follow the instructions in the comment, and setup request</string>
    <string name="naw_import">Import</string>
    <string name="naw_backup">Backup</string>
    <string name="naw_restore">Restore</string>
    <string name="naw_settings">Settings</string>

    <string name="naw_communicate">Communicate</string>
    <string name="naw_rate">Rate app</string>
    <string name="naw_share">Share</string>

    <string name="snackbar_fill_form">Please, fill form for save a code</string>
    <string name="ext_stor_perm_denied">Permission Denied, You cannot access External storage.</string>
    <string name="restore_select_title">selected </string>
    <string name="template_saved">Code saved</string>
    <string name="new_template_aded">New code aded</string>
    <!--Strings for intro slider  ============================================================== -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Quick access</string>
    <string name="slide_1_desc">Keep all codes you need at fingertips</string>
    <string name="slide_2_title">Simple settings </string>
    <string name="slide_2_desc">Import codes and create their own</string>
    <string name="slide_3_title">Secure usage</string>
    <string name="slide_3_desc">Protect your privacy with pin code or fingerprint</string>
    <!--Strings for authentication activity's ================================================== -->
    <string name="dialog_def_msg">Use your fingerprint to verify your identity</string>
    <string name="dialog_title">Touch the sensor</string>
    <string name="not_support_fingerprint">Your device doesn\'t support fingerprint authentication</string>
    <string name="enable_fingerprint">Please enable the fingerprint permission</string>
    <string name="register_fingerprint">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="enable_lockscreen">Please enable lock screen security in your device\'s Settings</string>
    <string name="incompatible_android_version">Your android version doesn\'t support fingerprint authentication</string>
    <string name="authentication_failed">Authentication failed \n</string>
    <string name="confirm_fail">Confirmation fail, try again</string>
    <string name="warning_data_lost">If you enter incorrect PIN again, application data will be lost</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="enter_current_pin">Enter current PIN</string>
    <string name="pin_set">PIN set</string>
    <string name="pin_set_canceled">PIN set canceled</string>
    <string name="app_data_deleted">Application data deleted</string>
    <string name="settings">Settings</string>
    <string name="security">Security</string>
    <string name="authorization">Authorization</string>
    <string name="change_pin">Change PIN</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="fingerprint_summary">Use fingerprint for authorization</string>
    <string name="confirm_pin">Confirm PIN</string>
    <!-- TourGuide Demo ======================================================================== -->
    <string name="demo_start_title">Start here!</string>
    <string name="demo_start_description">Please, take two steps to get acquainted with the application.</string>
    <string name="demo_one_title">Step one</string>
    <string name="demo_one_description">Navigate to the screen of codes download</string>
    <string name="demo_two_title">Step two</string>
    <string name="demo_two_descriptin">Choose and download a set of codes</string>

    <string name="share_link_subject">Play Store link for \"&app_name;\"</string>
    <string name="share_link_text">Open link to download the \"&app_name;\" application</string>
    <string name="share_via">Share via</string>
    <string name="no_internet_connection">No internet connection. Please, try late</string>
    <string name="help_locale">en</string>
    <string name="invitation">Sorry, I have no codes for you country. \n\nIf you
        ready to help me fill out the code templates, write to email: app.unidesign@gmail.com</string>
    <!-- Appearance =============================================================================-->
    <string name="toggleToLightTheme">Toggle to light theme</string>
    <string name="toggleToDarkTheme">Toggle to dark theme</string>
    <string name="appearance">Appearance</string>

</resources>
