<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_input"
            android:title="@string/naw_import"/>
        <!--item
            android:id="@+id/nav_import"
            android:title=""
            app:showAsAction="always"
            app:actionLayout="@layout/import_item_layout" /--> <!-- important part -->/>
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_backup"
            android:title="@string/naw_backup" />
        <item
            android:id="@+id/nav_restore"
            android:icon="@drawable/ic_restore"
            android:title="@string/naw_restore" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_settings"
            android:title="@string/naw_settings" />
    </group>

    <item android:title="@string/naw_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/naw_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/naw_send" />
        </menu>
    </item>

</menu>